# ai-linkedin-easy-apply-agent

./: .env.example  .flake8  .gitignore  README.md  check_rules.py  config.py  main.py  pyproject.toml  pytest_integration.ini  structure.md  test-structure-updated.md  test-structure.md
actions/: apply.py  fetch_jobs.py  fetch_jobs_sync.py  login.py
apply_form/: change_text_input.py  click_next_button.py  fill_boolean.py  fill_fields.py  fill_multiple_choice_fields.py  fill_text_fields.py  insert_home_city.py  insert_phone.py  uncheck_follow_company.py  upload_docs.py  wait_for_no_error.py
config/: normalizer_rules.yaml  profile_example.json  rules.yaml
core/: database.py  logger.py  metrics.py  resilience.py  selectors.py  utils.py
core/form_filler/: __init__.py  base.py  modal_flow_impl.py  modal_flow_resources.py  models.py  service.py
demo_form/: README.md  index.html  test_data.json  test_rule_numeric.py  test_runner.py  test_runner_with_llm.py
diagnostics/: __init__.py  basic.py  capture.py  har.py  masking.py  naming.py  storage.py  trace.py  types.py
docs/: README.md  architecture.md  components.md  contribution-guide.md  database-schema.md  easy_apply_button_detection.md  getting-started.md  llm-integration.md  modal-flow-rule-generation.md  modal_flow_rules_reference.md  performance-optimization.md  project-structure.md  testing.md  workflow.md
docs/archive/: discovery_state.md  documentation_plan.md  watermark_discovery_plan.md
docs/changelog/: bot-mode-submit-migration.md  bugfix-duplicate-jobs.md  migration-guide-v2.md  rule-generation-separate-request.md
llm/: client_factory.py  cover_letter_generator.py  exceptions.py  llm_client.py  prompts.py  resume_utils.py  schemas.py  structured_schemas.py  utils.py  vacancy_filter.py
modal_flow/: __init__.py  document_upload.py  example.py  field_signature.py  learning_config.py  llm_delegate.py  llm_delegate_openai.py  modal_flow.py  normalizer.py  profile_schema.py  profile_store.py  rule_validator.py  rules_engine.py  rules_store.py  strategy_generator.py
modal_flow/strategies/: __init__.py  base.py  literal.py  numeric.py  one_of_options.py  profile_key.py  salary_by_currency.py
phases/: discovery.py  enrichment.py  processing.py
scripts/: .env  e2e_cover_letter_validation.py  e2e_skill_match_validation.py  tmp_resume.txt  vacancies.json
tests/: conftest.py
tests/fixtures/: sample_company_page.html  sample_job_page.html  sample_search_page.html
tests/integration/: conftest.py  test_cover_letter_end_to_end.py  test_database_flow.py  test_discovery_state_flow.py  test_llm_filter_fallback.py  test_phases_flow.py  test_rule_generation_integration.py  test_scraping_logic.py  test_workflow_integration.py
tests/unit/: test_main.py
tests/unit/actions/: test_apply.py  test_discovery_watermark.py  test_fetch_jobs.py  test_login.py
tests/unit/apply_form/: test_change_text_input.py  test_click_next_button.py  test_fill_boolean.py  test_fill_fields.py  test_fill_multiple_choice_fields.py  test_fill_text_fields.py  test_insert_home_city.py  (+4 more)
(+24 files in other folders)
